Get rid of some more minor errors